# CoreEcon

./: .gitignore  pyproject.toml
unit1/: exercises.ipynb
