[tool.poetry]
name = "coreecon"
version = "0.1.0"
description = ""
authors = ["Sid Mitra <sidmitra.del@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.6"
ipython = "^7.13.0"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
